Update error page content and structure

--- a/error.html
+++ b/error.html
@@ -24,10 +24,9 @@
   </style>
 </head>
 <body>
-  <h1>Error: Name not found</h1>
-  <p id="error-message">Name not found for the provided .bitmap address.</p>
-  <p>Please check the address and try again. Ensure you enter the URL as <code>http://youraddress.bitmap</code> in the address bar to avoid triggering a search.</p>
-  <p>Visit <a href="https://github.com/Zmakin/BNS">https://github.com/Zmakin/BNS</a> for more information.</p>
-  <script src="error.js"></script>
+  <h1 id="error-title">Error: Not found</h1>
+  <p id="error-message">Not found for the provided .bitmap address.</p>
+  <p>Please check the input and try again. Ensure you enter the URL as <code>http://youraddress.bitmap</code> in the address bar.</p>
+   <script src="error.js"></script>
 </body>
 </html>
